# atlas-engine

./: .gitignore  ASTEROID_SHOOTER_README.md  CMakeLists.txt  MSAA_GUIDE.md  PIXEL_ART_GUIDE.md  README.md  note.txt
assets/: assert.psd
assets/shaders/: depth.glsl  point_depth.frag  point_depth.geom  point_depth.vert  scene.frag  scene.glsl  scene.vert
assets/textures/: sample.aseprite
include/: assets.h  game.h  gl_renderer.hpp  interface.h  render_types.h  utils.h
include/buffers/: vao.h
include/components/: asteroid.hpp  camera.hpp  circle.hpp  collision_handler.hpp  gamemanager.hpp  player.hpp  react.hpp  spaceship.hpp
include/components/physics/: box.hpp  circle.hpp  collider.hpp  collider2d.hpp  rigidbody2d.hpp
include/engine/: color.h  engine.hpp  input.h  input.hpp  mesh.hpp  quad.hpp  scene.hpp  shader.hpp  shape.h  singleton.h  system.hpp  texture2D.hpp
include/physics/: collider2d.hpp  comp.h  rigidbody2d.hpp  world.hpp
include/platform/: win32.h
include/systems/: physics.hpp  render.hpp
include/utils/: array.h  mathf.h  phys2d.h
src/: main.cpp
src/core/: game.cpp  gl_renderer.cpp  shader.cpp
src/engine/: engine.cpp
src/platform/: win32.cpp
